<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fileItem"
        android:icon="@drawable/ic_action_folder"
        android:title="@string/menu_file_text"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/copyItem"
                android:icon="@drawable/ic_action_copy"
                android:title="@string/menu_copy_text"/>
            <item
                android:id="@+id/cutItem"
                android:icon="@drawable/ic_action_cut"
                android:title="@string/menu_cut_text"/>
            <item
                android:id="@+id/pasteItem"
                android:icon="@drawable/ic_action_paste"
                android:title="@string/menu_paste_text"/>
        </menu>
    </item>
    <item
        android:id="@+id/searchItem"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search_text"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/compareItem"
        android:icon="@drawable/ic_action_compare"
        android:title="@string/menu_compare_text"/>
</menu>